--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,16 @@
   <name>Props - Property Access Utility for Java</name>
   <description>Props - Property Access Utility for Java</description>
 
+  <scm>
+    <developerConnection>scm:git:ssh://git@git.corp.yahoo.com:jw/props.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+    <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
+    <wagon-ssh-external.version>1.0-beta-6</wagon-ssh-external.version>
     <target_jdk_version>1.8</target_jdk_version>
   </properties>
 
@@ -31,7 +38,27 @@
 
   </dependencies>
 
+  <distributionManagement>
+    <repository>
+      <id>artifactory.ops.yahoo.com-releases</id>
+      <name>artifactory.ops.yahoo.com-releases</name>
+      <url>scpexe://artifactory-ssh-proxy.corp.yahoo.com:4443/maven-local-release/</url>
+    </repository>
+    <snapshotRepository>
+      <id>yahoo-local-snapshot</id>
+      <url>scpexe://artifactory-ssh-proxy.corp.yahoo.com:4443/maven-local-snapshot/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-ssh-external</artifactId>
+        <version>${wagon-ssh-external.version}</version>
+      </extension>
+    </extensions>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +67,11 @@
           <source>${target_jdk_version}</source>
           <target>${target_jdk_version}</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>${maven-release-plugin.version}</version>
       </plugin>
     </plugins>
     <pluginManagement>
