--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,4 +1,6 @@
 platform: java
 shared:
   notification_email: jw@yahoo-inc.com
-jobs: {}
+jobs:
+  release:
+    order: [init, assemble, flatten, restore, maven-build, maven-release-prepare, maven-release-perform]
