--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,6 +1,4 @@
 platform: java
 shared:
   notification_email: jw@yahoo-inc.com
-jobs:
-  release:
-    order: [init, assemble, flatten, restore, maven-build, maven-release-prepare, maven-release-perform]
+jobs: {}
