--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.yahoo</groupId>
   <artifactId>props</artifactId>
-  <version>1.1.4</version>
+  <version>1.1.5</version>
   <name>Props - Property Access Utility for Java</name>
   <description>Props - Property Access Utility for Java</description>
 
   <scm>
-    <developerConnection>scm:git:ssh://git@git.corp.yahoo.com:jw/props.git</developerConnection>
+    <developerConnection>scm:git:ssh://git@git.corp.yahoo.com:localsearch/props.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
