--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,27 +1,27 @@
-platform: java
-shared:
-  notifications:
-    email: local-search-dev@verizonmedia.com
-  plugins:
-    test_results:
-      type: junit
-      parameters:
-        path: '**/target/surefire-reports/**'
-jobs:
-  component:
-    triggers:
-      - release
-  release:
-    order:
-      - init
-      - assemble
-      - flatten
-      - restore
-      - maven-build
-      - maven-release-prepare
-      - maven-release-perform
-
----
+#platform: java
+#shared:
+#  notifications:
+#    email: local-search-dev@verizonmedia.com
+#  plugins:
+#    test_results:
+#      type: junit
+#      parameters:
+#        path: '**/target/surefire-reports/**'
+#jobs:
+#  component:
+#    triggers:
+#      - release
+#  release:
+#    order:
+#      - init
+#      - assemble
+#      - flatten
+#      - restore
+#      - maven-build
+#      - maven-release-prepare
+#      - maven-release-perform
+#
+#---
 version: 4
 shared:
   settings:
