--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
     <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
     <maven-surefire-report-plugin.version>${maven-surefire-plugin.version}</maven-surefire-report-plugin.version>
-    <maven-clover2-plugin.version>4.0.0</maven-clover2-plugin.version>
+    <clover-maven-plugin.version>4.4.1</clover-maven-plugin.version>
     <wagon-ssh-external.version>1.0-beta-6</wagon-ssh-external.version>
     <target_jdk_version>1.8</target_jdk_version>
     <buildtype>test</buildtype>
@@ -107,8 +107,9 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>com.atlassian.maven.plugins</groupId>
-            <artifactId>maven-clover2-plugin</artifactId>
+            <groupId>org.openclover</groupId>
+            <artifactId>clover-maven-plugin</artifactId>
+            <version>${clover-maven-plugin.version}</version>
             <executions>
               <execution>
                 <id>clover</id>
@@ -123,14 +124,12 @@
                   <generateXml>true</generateXml>
                   <jdk>${target_jdk_version}</jdk>
                   <includesAllSourceRoots>false</includesAllSourceRoots>
-                  <licenseLocation>/home/y/conf/clover/clover.license</licenseLocation>
                 </configuration>
               </execution>
             </executions>
             <configuration>
               <includesAllSourceRoots>false</includesAllSourceRoots>
               <jdk>${target_jdk_version}</jdk>
-              <licenseLocation>/home/y/conf/clover/clover.license</licenseLocation>
             </configuration>
           </plugin>
           <plugin>
@@ -178,12 +177,11 @@
       <reporting>
         <plugins>
           <plugin>
-            <groupId>com.atlassian.maven.plugins</groupId>
-            <artifactId>maven-clover2-plugin</artifactId>
-            <version>${maven-clover2-plugin.version}</version>
+            <groupId>org.openclover</groupId>
+            <artifactId>clover-maven-plugin</artifactId>
+            <version>${clover-maven-plugin.version}</version>
             <configuration>
               <jdk>${target_jdk_version}</jdk>
-              <licenseLocation>/home/y/conf/clover/clover.license</licenseLocation>
             </configuration>
           </plugin>
         </plugins>
