--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,27 +1,3 @@
-#platform: java
-#shared:
-#  notifications:
-#    email: local-search-dev@verizonmedia.com
-#  plugins:
-#    test_results:
-#      type: junit
-#      parameters:
-#        path: '**/target/surefire-reports/**'
-#jobs:
-#  component:
-#    triggers:
-#      - release
-#  release:
-#    order:
-#      - init
-#      - assemble
-#      - flatten
-#      - restore
-#      - maven-build
-#      - maven-release-prepare
-#      - maven-release-perform
-#
-#---
 version: 4
 shared:
   settings:
@@ -75,40 +51,26 @@ shared:
     MAVEN_OWASP_CHECK_FORMAT: ALL
     ENABLE_EXPORT_SONAR_ENV: 'true'
     JAVA_ASSEMBLE_ADDITIVE_YIDF_DIRECTORY: screwdriver
+  steps:
+    - preinit: export LANG=en_US.UTF-8
 
 jobs:
+  pull-request:
+    template: java-platform/maven-oracle-jdk@stable
+    requires: [~pr]
+    image: >-
+      docker.ouroath.com:4443/java_platform/ylinux6-yinst-oraclejdk-latest:latest-1.8
+
   component:
     template: java-platform/maven-oracle-jdk@stable
-    requires:
-      - ~commit
-      - ~pr
-    steps:
-      - preinit: export LANG=en_US.UTF-8
+    requires: [~commit]
     image: >-
       docker.ouroath.com:4443/java_platform/ylinux6-yinst-oraclejdk-latest:latest-1.8
 
   release:
+    template: java-platform/maven-oracle-jdk@stable
     requires:
       - component
-    steps:
-      - preinit: export LANG=en_US.UTF-8
-      - init: |
-          source sdv4-template-init.sh
-          source sdv4-template-gitclone.sh
-      - assemble: |
-          sdv4-template-assemble.sh
-      - flatten: |
-          sdv4-template-flatten.sh
-      - restore: |
-          sdv4-template-restore.sh
-      - mvn-build: >-
-          echo step 'maven-build' is not defined in template
-          'java-platform/maven-oracle-jdk@stable' or shared steps section. Skipping
-          order parsing..
-      - maven-release-prepare: |
-          sdv4-template-mvn-release-prepare.sh
-      - maven-release-perform: |
-          sdv4-template-mvn-release-perform.sh
     image: >-
       docker.ouroath.com:4443/java_platform/ylinux6-yinst-oraclejdk-latest:latest-1.8
     
