--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,27 +1,3 @@
-#platform: java
-#shared:
-#  notifications:
-#    email: local-search-dev@verizonmedia.com
-#  plugins:
-#    test_results:
-#      type: junit
-#      parameters:
-#        path: '**/target/surefire-reports/**'
-#jobs:
-#  component:
-#    triggers:
-#      - release
-#  release:
-#    order:
-#      - init
-#      - assemble
-#      - flatten
-#      - restore
-#      - maven-build
-#      - maven-release-prepare
-#      - maven-release-perform
-#
-#---
 version: 4
 shared:
   settings:
@@ -78,14 +54,14 @@ shared:
 
 jobs:
   component:
-    template: java-platform/maven-oracle-jdk@stable
+    template: java-platform/maven-open-jdk-8-rhel7@1.0.9
     requires:
       - ~commit
       - ~pr
     steps:
       - preinit: export LANG=en_US.UTF-8
     image: >-
-      docker.ouroath.com:4443/java_platform/ylinux6-yinst-oraclejdk-latest:latest-1.8
+      docker.ouroath.com:4443/java_platform/ylinux7-yinst-openjdk-latest:latest-11
 
   release:
     requires:
@@ -103,12 +79,12 @@ jobs:
           sdv4-template-restore.sh
       - mvn-build: >-
           echo step 'maven-build' is not defined in template
-          'java-platform/maven-oracle-jdk@stable' or shared steps section. Skipping
+          'java-platform/maven-open-jdk-8-rhel7@stable' or shared steps section. Skipping
           order parsing..
       - maven-release-prepare: |
           sdv4-template-mvn-release-prepare.sh
       - maven-release-perform: |
           sdv4-template-mvn-release-perform.sh
     image: >-
-      docker.ouroath.com:4443/java_platform/ylinux6-yinst-oraclejdk-latest:latest-1.8
+      docker.ouroath.com:4443/java_platform/ylinux7-yinst-openjdk-latest:latest-11
     
