--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,62 +1,13 @@
 version: 4
 shared:
+  template: java-platform/maven-open-jdk-8-rhel7@1.0.9
   settings:
     email: local-search-dev@verizonmedia.com
-  environment:
-    CONTAINER: oracle-jdk8-current
-    IS_PUBLISH_CONTAINER: 'true'
-    STATECC_BRANCH: test
-    ASCEND_BRANCH: 'true'
-    INPUT_YIDF: '${CONFIG_DIR}/screwdriver/additive-merged.yidf'
-    OUTPUT_STATEFILE: '${ARTIFACTS_DIR}/client-container.state'
-    RESTORE_STATEFILE: '${ARTIFACTS_DIR}/client-container.state'
-    RESTORE_BRANCH: test
-    RESTORE_YINST_START: 'true'
-    JDK_VERSION: '1.8'
-    JDK_MAX_VERSION: '11'
-    MVN_OPTS: ''
-    MVN_PREINST: ''
-    MVN_INSTALL: install
-    MVN_PRESITE: ''
-    MVN_SITE: site
-    MVN_DEPLOY: deploy
-    MVN_SDPROFILE: '-Dscrewdriver3 -Dscrewdriver4'
-    MVN_DEFAULT_SETTINGS: '-Djava.awt.headless=true -Dmin_jdk_version=${JDK_VERSION} -Dmax_jdk_version=${JDK_MAX_VERSION}'
-    MVN_SETTINGS: ''
-    PACK_TARGET_DIR: '${ARTIFACTS_DIR}'
-    PACK_STAGE_DIR: ./target/yinst
-    PACK_YICF_DIR: ./target/yicf
-    PUB_BRANCH: quarantine
-    PUB_MAIL_NOTIF: 'false'
-    PUB_IDENTITY_FILE: ~/.ssh/rsa_dist
-    PUB_FAIL_NO_PACKAGE: 'false'
-    PUB_EXTRA_OPTIONS: '-os all'
-    MAVEN_OPTS: '-Xmx2g'
-    MAVEN_CACHE_DIR: /home/screwdrv/.m2/repository/
-    MAVEN_CACHE_CLEANUP: 'true'
-    ENABLE_MAVEN_CACHE: 'true'
-    MAVEN_CACHE_SCOPE: job
-    RESTART_YKEYKEYD: 'false'
-    ENABLE_MAVEN_OWASP_CHECK: 'false'
-    MAVEN_OWASP_CHECK_VERSION: 4.0.2
-    MAVEN_OWASP_CHECK_SUPPRESSION_FILE: suppression.xml
-    MAVEN_OWASP_CHECK_FAIL_BUILD_ON_CVSS: '11'
-    MAVEN_OWASP_CHECK_SKIP_SYSTEM_SCOPE: 'false'
-    MAVEN_OWASP_CHECK_SKIP_PROVIDED_SCOPE: 'false'
-    MAVEN_OWASP_CHECK_SKIP_RUNTIME_SCOPE: 'false'
-    MAVEN_OWASP_CHECK_SKIP_TEST_SCOPE: 'false'
-    MAVEN_OWASP_CHECK_SKIP_DEPENDENCY_MANAGEMENT: 'true'
-    MAVEN_OWASP_CHECK_ASSEMBLY_ANALYZER_ENABLED: 'false'
-    MAVEN_OWASP_CHECK_FAIL_ON_ERROR: 'false'
-    MAVEN_OWASP_CHECK_FORMAT: ALL
-    ENABLE_EXPORT_SONAR_ENV: 'true'
-    JAVA_ASSEMBLE_ADDITIVE_YIDF_DIRECTORY: screwdriver
   steps:
     - preinit: export LANG=en_US.UTF-8
 
 jobs:
   pull-request:
-    template: java-platform/maven-open-jdk-8-rhel7@1.0.9
     requires: [~pr]
     steps:
       - presonar: |
@@ -64,38 +15,10 @@ jobs:
           ls -al ./target
           ls -al ./target/site
           ls -al ./target/site/clover
-    image: >-
-      docker.ouroath.com:4443/java_platform/ylinux7-yinst-openjdk-latest:latest-11
 
   component:
-    template: java-platform/maven-open-jdk-8-rhel7@1.0.9
     requires: [~commit]
-    image: >-
-      docker.ouroath.com:4443/java_platform/ylinux7-yinst-openjdk-latest:latest-11
 
   release:
-    template: java-platform/maven-open-jdk-8-rhel7@1.0.9
-    requires:
-      - component
-    steps:
-      - preinit: export LANG=en_US.UTF-8
-      - init: |
-          source sdv4-template-init.sh
-          source sdv4-template-gitclone.sh
-      - assemble: |
-          sdv4-template-assemble.sh
-      - flatten: |
-          sdv4-template-flatten.sh
-      - restore: |
-          sdv4-template-restore.sh
-      - mvn-build: >-
-          echo step 'maven-build' is not defined in template
-          'java-platform/maven-open-jdk-8-rhel7@stable' or shared steps section. Skipping
-          order parsing..
-      - maven-release-prepare: |
-          sdv4-template-mvn-release-prepare.sh
-      - maven-release-perform: |
-          sdv4-template-mvn-release-perform.sh
-    image: >-
-      docker.ouroath.com:4443/java_platform/ylinux7-yinst-openjdk-latest:latest-11
-    
+    requires: [component]
+
