--- a/pom.xml
+++ b/pom.xml
@@ -1,188 +1,64 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.yahoo</groupId>
-  <artifactId>props</artifactId>
-  <version>1.2.5-SNAPSHOT</version>
-  <name>Props - Property Access Utility for Java</name>
-  <description>Props - Property Access Utility for Java</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.yahoo</groupId>
+    <artifactId>props</artifactId>
+    <version>1.2.5-SNAPSHOT</version>
+    <name>Props - Property Access Utility for Java</name>
+    <description>Props - Property Access Utility for Java</description>
 
-  <scm>
-    <developerConnection>scm:git:ssh://git@git.corp.yahoo.com/localsearch/props.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+        <target_jdk_version>1.8</target_jdk_version>
+        <buildtype>test</buildtype>
+    </properties>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-    <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
-    <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>${maven-surefire-plugin.version}</maven-surefire-report-plugin.version>
-    <clover-maven-plugin.version>4.4.0</clover-maven-plugin.version>
-    <wagon-ssh-external.version>1.0-beta-6</wagon-ssh-external.version>
-    <target_jdk_version>1.8</target_jdk_version>
-    <buildtype>test</buildtype>
-  </properties>
+    <dependencies>
 
-  <dependencies>
-    <!-- scope:compile -->
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>24.1.1-jre</version>
-    </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>24.1.1-jre</version>
+        </dependency>
 
-    <!-- scope:test -->
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.9.10</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.10</version>
+            <scope>test</scope>
+        </dependency>
 
-  </dependencies>
+    </dependencies>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>lsbe-local-snapshot</id>
-      <name>lsbe-local-snapshot</name>
-      <url>scpexe://artifactory-ssh-proxy.corp.yahoo.com:4443/lsbe-maven-local-snapshot/</url>
-    </snapshotRepository>
-    <repository>
-      <id>lsbe-local-release</id>
-      <name>lsbe-local-release</name>
-      <url>scpexe://artifactory-ssh-proxy.corp.yahoo.com:4443/lsbe-maven-local-release/</url>
-    </repository>
-  </distributionManagement>
+    <build>
 
-  <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh-external</artifactId>
-        <version>${wagon-ssh-external.version}</version>
-      </extension>
-    </extensions>
-
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven-compiler-plugin.version}</version>
-          <configuration>
-            <optimize>true</optimize>
-            <showDeprecation>true</showDeprecation>
-            <showWarnings>true</showWarnings>
-            <source>${target_jdk_version}</source>
-            <target>${target_jdk_version}</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.3</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>2.7</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
-  <profiles>
-    <profile>
-      <id>screwdriver-v3</id>
-      <activation>
-        <property>
-          <name>screwdriver3</name>
-        </property>
-      </activation>
-      <properties>
-        <buildtype>release</buildtype>
-        <maven.yinst.create.skip>true</maven.yinst.create.skip>
-        <project.reporting.outputDirectory>${env.TEST_RESULTS_DIR}</project.reporting.outputDirectory>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.openclover</groupId>
-            <artifactId>clover-maven-plugin</artifactId>
-            <version>${clover-maven-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>clover</id>
-                <phase>prepare-package</phase>
-                <goals>
-                  <goal>instrument</goal>
-                  <goal>clover</goal>
-                </goals>
-                <configuration>
-                  <targetPercentage>1%</targetPercentage>
-                  <generateHtml>true</generateHtml>
-                  <generateXml>true</generateXml>
-                  <jdk>${target_jdk_version}</jdk>
-                  <includesAllSourceRoots>false</includesAllSourceRoots>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven-surefire-plugin.version}</version>
-            <configuration>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>${maven-surefire-report-plugin.version}</version>
-            <configuration>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>yahoo.yinst.maven_plugins</groupId>
-            <artifactId>yjava_maven_plugins_yinst</artifactId>
-            <executions>
-              <execution>
-                <id>yinst-resources</id>
-                <phase>generate-resources</phase>
-                <goals>
-                  <goal>resources</goal>
-                </goals>
-                <configuration>
-                  <buildtype>${buildtype}</buildtype>
-                </configuration>
-              </execution>
-              <execution>
-                <id>yinst-yicf</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>yicf</goal>
-                </goals>
-                <configuration>
-                  <buildtype>${buildtype}</buildtype>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-      <reporting>
-        <plugins>
-          <plugin>
-            <groupId>org.openclover</groupId>
-            <artifactId>clover-maven-plugin</artifactId>
-            <version>${clover-maven-plugin.version}</version>
-            <configuration>
-              <jdk>${target_jdk_version}</jdk>
-            </configuration>
-          </plugin>
-        </plugins>
-      </reporting>
-    </profile>
-  </profiles>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <optimize>true</optimize>
+                        <showDeprecation>true</showDeprecation>
+                        <showWarnings>true</showWarnings>
+                        <source>${target_jdk_version}</source>
+                        <target>${target_jdk_version}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
